Fixes to tooltip being stuck at the screen edges

--- a/src/style.css
+++ b/src/style.css
@@ -195,6 +195,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   box-shadow: 0 0 5px rgba(0, 0, 0, 1);
   z-index: 100;
+  pointer-events: none;
 }
 
 .recipe-tooltip.hidden {
